# orbot-space-math

./: .gitignore  CMakeLists.txt  README.md
include/OrbitCore/: Physics.hpp  SpaceBase.hpp  Spacecraft.hpp  Vector3.hpp
src/: Physics.cpp  SpaceBase.cpp  Spacecraft.cpp  Vector3.cpp  main.cpp
tests/: OrbitCoreTests.cpp
